# faer-bfgs

./: Cargo.toml  README.md
benches/: bfgs_benchmark.rs
src/: bfgs.rs  lib.rs  tests_bfgs.rs
