[package]
name = "faer-bfgs"
version = "0.1.0"
edition = "2021"
description = """
A pure Rust implementation of the BFGS optimization algorithm using faer,
ported from https://github.com/paulkernfeld/bfgs
"""
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
faer    = "0.18.2"
anyhow  = "1.0.82"

[dev-dependencies]
criterion = { version = "0.3", features=["html_reports"] }
rand      = "*"

[[bench]]
name    = "bfgs_benchmark"
harness = false
